# cxx-template

./: .gitignore  .travis.yml  Makefile  README.md
cmake/: CMakeLists.txt
cmake/dox/: CMakeLists.txt  Doxyfile.in
demos/: circle_demo.cpp  rectangle_demo.cpp
dox/: Doxyfile
src/: Circle.cpp  Circle.h  Debug.h  MinUnit.h  Rectangle.cpp  Rectangle.h
tests/: circle_tests.cpp  rectangle_tests.cpp  runtests
